
The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

toc::[]

== Planned
=== Release after 2.9.0
* Remove `CombineValues::AcrossFieldGroup`
* Remove `Reshape::CollapseMultipleFieldsToOneTypedFieldPair`
* Remove `FilterRows::FieldValueGreaterThan`
* Remove `Helpers.delim_only?`

== Unreleased
These changes are merged into the `main` branch but have not yet been tagged as a new version/release.

==== Breaking
* Removes Hash `conditions` parameter and `sep` parameter from `Merge::ConstantValueConditional` transform, replacing with lambda Proc `condition` parameter. In https://github.com/lyrasis/kiba-extend/pull/88[PR#88]
* **Is not breaking within `kiba-extend`, but potentially could affect direct use by ETL project code:** `Helpers.delim_only?` now returns true if the given value is `nil` or `empty?` In https://github.com/lyrasis/kiba-extend/pull/92[PR#92]

==== Added

* `Helpers::DelimOnlyChecker` service class to replace `Helpers.delim_only?`. In https://github.com/lyrasis/kiba-extend/pull/92[PR#92]
* `Delete::DelimiterOnlyFieldValues`, `Deduplicate::FlagAll`, `Collapse::FieldsWithCustomFieldmap`, `Collapse::FieldsToRepeatableFieldGroup`, and `Collapse::FieldsToTypedFieldPair` transforms. In https://github.com/lyrasis/kiba-extend/pull/92[PR#92]
* `stripextra` csv converter to do aggressive stripping of csv field values, _without_ converting 'NULL' strings to ``nilValue``s. In https://github.com/lyrasis/kiba-extend/pull/91[PR#91]
* `FilterRows::WithLambda` transform. In https://github.com/lyrasis/kiba-extend/pull/85[PR#85]
* `FilterRows::AllFieldsPopulated` transform. In https://github.com/lyrasis/kiba-extend/pull/85[PR#85]
* `FilterRows::AnyFieldsPopulated` transform. In https://github.com/lyrasis/kiba-extend/pull/85[PR#85]