@@ -22,6 +22,7 @@ toc::[]
 
 == Planned
 === Release after 2.9.0
+* Remove `Clean::DelimiterOnlyFields`
 * Remove `CombineValues::AcrossFieldGroup`
 * Remove `Reshape::CollapseMultipleFieldsToOneTypedFieldPair`
 * Remove `FilterRows::FieldValueGreaterThan`
